--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,6 +3,8 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
+{% load cache %}
+  {% cache 20 page_obj %}
   {% for post in page_obj %}
   {% if user.is_authenticated %}
     {% include 'includes/switcher.html' %}
@@ -19,5 +21,6 @@
     </article>
     {% if not forloop.last %}<hr>{% endif %}    
   {% endfor %}
+  {% endcache %}
   {% include 'includes/paginator.html' %}
 {% endblock %}
